RESOLVED FIXED117947
REGRESSION (r147591): can't type in Adobe Connect
https://bugs.webkit.org/show_bug.cgi?id=117947
Summary REGRESSION (r147591): can't type in Adobe Connect
Anders Carlsson
Reported 2013-06-24 13:53:42 PDT
REGRESSION (r147591): can't type in Adobe Connect
Attachments
Patch (1.48 KB, patch)
2013-06-24 13:54 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-06-24 13:54:53 PDT
Andreas Kling
Comment 2 2013-06-24 14:04:40 PDT
Comment on attachment 205326 [details] Patch Sweet fix. r=me.
Anders Carlsson
Comment 3 2013-06-24 14:09:52 PDT
Note You need to log in before you can comment on or make changes to this bug.