REGRESSION (r147591): can't type in Adobe Connect https://bugs.webkit.org/show_bug.cgi?id=117947 <rdar://problem/14223539>

Reviewed by Andreas Kling.

With the change in r147591, it is now possible for a plug-in element to be focused before the plug-in
starts. Handle this by focusing the plug-in right after it's started if necessary.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::didInitializePlugin):

Canonical link: https://commits.webkit.org/136075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151927 268f45cc-cd09-0410-ab3c-d52691b4dbfc